2005-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (write_multiline, on_page): New routine on_page(x,y) to
	check coordinates for being in range of entire terminal drawing area.
	Use this in write_multiline() to centralize text clipping (may extend
	it to single line text later). Fixes bug #1274007 and a lot of old
	complaints about segfaults in libpdf.

	* src/term_api.h term/post.trm: But some terminals can clip text just
	fine on their own, and do it more cleanly than on_page() can do. Define
	a terminal flag TERM_CAN_CLIP for these cases, starting with post.trm.
	If the flag is set for the current terminal, on_page() always returns
	TRUE.

	* src/graph3d.c (xtick_callback ytick_callback ztick_callback):
	Since write_multiline() now does its own clipping, it does not need to
	be wrapped by clip_put_text_just(). While we're here, apply text
	rotation for tic labels.

	* src/gadgets.c src/gadgets.h src/color.c: This leaves no callers for
	clip_put_text_just(), so remove the routine altogether.

2005-09-15  Harald Harders  <h.harders@tu-bs.de>

	* src/variable.c term/post.trm (PS_options, documentation):
	Fix bugs in fontfile handling of ps terminal. Document "nofontfiles".
	SourceForge patch #1269469.

2005-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save: Add rgb_variable.dem to the
	autogenerated html set.  Also add dashcolor.dem, which is complicated
	by needing to generate an *.eps file and then convert it to *.png.
	
	* demo/all.dem: Add rainbow.dem and rgb_variable.dem

	* src/gadgets.h: Initialize axis labels to use linetype -1, not 0.

2005-09-14  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: The histogram plot style was not being listed as an
	option under 'help plotting styles'.

2005-09-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/color.c src/gadgets.c src/gadgets.c
	src/graph3d.c src/graphics.c src/save.c src/set.c src/show.c src/term.c